--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Find Your Favourite Comic Book Character</title>
+    <title>Super Selector</title>
     
     <link rel="stylesheet" href="../static/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="../static/css/dc.min.css" type="text/css" />
