Added datagrid with image and info

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div id="power-selector"></div>
     </section>        
     <section class="container-fluid">        
-        <div id="character-table"></div>
+        <div class="dc-data-grid" id="character-table"></div>
     </section>        
 
     
