Added superpower selection selectmenu

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
     </section>        
     <section class="container-fluid">        
         <div id="costume-selector"></div>
-    </section>        
+    </section>
     <section class="container-fluid">        
+        <div id="power-selection"></div>
+    </section> 
+    <!-- <section class="container-fluid">        
         <div id="power-selector"></div>
-    </section>        
+    </section>         -->
     <section class="container-fluid">        
         <div class="dc-data-grid" id="character-table"></div>
-    </section>        
+    </section>
+     
 
     
 </body>
