Added initial styling to 'homepage' section

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
     
     <section class="container-fluid" id="intro">
-        <div class="text-center">
-            <h1>Super Selector</h1>
+        <div class="col-md-offset-2 col-md-8 text-center main-page">
+            <h1 class="main-title">Super Selector</h1>
                 <p>Welcome to the <strong>Super Selector</strong>.</p>
                 <p>As you work through the next few pages you will be able to pick the superhuman characteristics that are most important to you.</p>
                 <p>At the end of the selector, you will find your perfect comic book character based on the selections that you make.</p>
