--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
     
     <!-- Load scripts -->
 
-    <script type="text/javascript" src="../static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="../static/js/d3.min.js"></script>
-    <script type="text/javascript" src="../static/js/crossfilter.min.js"></script>
-    <script type="text/javascript" src="../static/js/dc.min.js"></script>
-    <script type="text/javascript" src="../static/js/graphs.js"></script>
-    <script type="text/javascript" src="../static/js/transitions.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/d3.min.js"></script>
+    <script src="../static/js/crossfilter.min.js"></script>
+    <script src="../static/js/dc.min.js"></script>
+    <script src="../static/js/graphs.js"></script>
+    <script src="../static/js/transitions.js"></script>
 
 </body>
 
