--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     
     <!-- Load stylesheets -->
 
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="../static/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="../static/css/dc.min.css" type="text/css" />
-    <link rel="stylesheet" href="../static/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="static/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="static/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="static/css/dc.min.css" type="text/css" />
+    <link rel="stylesheet" href="static/css/style.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Bangers|Delius" rel="stylesheet">
 
 </head>
@@ -199,12 +199,12 @@
     
     <!-- Load scripts -->
 
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/d3.min.js"></script>
-    <script src="../static/js/crossfilter.min.js"></script>
-    <script src="../static/js/dc.min.js"></script>
-    <script src="../static/js/graphs.js"></script>
-    <script src="../static/js/transitions.js"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/js/d3.min.js"></script>
+    <script src="static/js/crossfilter.min.js"></script>
+    <script src="static/js/dc.min.js"></script>
+    <script src="static/js/graphs.js"></script>
+    <script src="static/js/transitions.js"></script>
 
 </body>
 
